# kubetorch-coreweave

./: .gitignore  README.md  pyproject.toml
SUNK_agents/: 01_architecture_and_concepts.md  02_deployment_and_configuration.md  03_user_management.md  04_workload_management.md  05_advanced_features.md  06_monitoring_and_troubleshooting.md  07_development_workflows.md  08_specialized_workloads.md  09_reference.md  README.md
admin/: README.md  helmfile.yaml
admin/docs/: coreweave_k8s.md  kubetorch_setup.md
demos/: README.md
demos/advanced/: README.md  autoscale_demo.py  distributed_ddp.py  resource_requests.py  secrets_demo.py
demos/basics/: README.md  hello_world.py  pvc_access.py  user_labels.py
demos/gpu/: README.md  gpu_sunk_kubetorch.py  gpu_sunk_raw.yaml  gpu_sunk_scheduler.py  test_sunk_cpu.py
demos/pxs/: README.md  pxs_artifactory.py  pxs_editable_install.py  pxs_editable_rsync.py  pxs_local_editable.py  pxs_secrets_install.py  utils.py
demos/sunk/: Dockerfile.pxs  PXS_GPU_IMAGE.md  README.md  gpu_sunk_kubetorch.py  pxs_gpu_train.py  test_sunk_cpu.py
demos/warmstart/: README.md  breakpoint_debug.py  concurrent_calls.py  hot_reload.py  ssh_into_pod.py  state_persistence.py  timing_demo.py
kubetorch_agents/: 01_overview.md  02_installation.md  04_compute.md  06_fn_and_cls.md  08_secrets.md  09_distributed.md  10_autoscaling.md  12_configuration.md  15_logging_debugging.md  16_advanced.md  17_exceptions.md  18_examples.md  README.md
kubetorch_claude/: 03_quickstart.md  04_compute.md  05_image.md  06_fn_and_cls.md  07_volumes.md  08_secrets.md  09_distributed.md  10_autoscaling.md  11_cli.md  12_configuration.md  13_decorators.md  14_app.md  15_logging_debugging.md  README.md
