[project]
name = "kubetorch-demo"
version = "0.1.0"
description = "Kubetorch demo suite"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "kubetorch[client]>=0.2.9",
    "torch",
    "physicsx.pxs[opora]==0.29.0-dev.11",
    "dotenv>=0.9.9",
    "ruff>=0.14.10",
]

[tool.uv]
prerelease = "allow"
index-strategy = "unsafe-best-match"

[tool.uv.sources]
"physicsx.pxs" = { index = "px-pypi-release" }

[[tool.uv.index]]
name = "px-pypi-release"
url = "https://physicsx.jfrog.io/artifactory/api/pypi/px-pypi-release/simple"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# List of Ruff rules to enable (https://docs.astral.sh/ruff/rules/)
select = [
    "C4",  # flake8-comprehensions
    "C90", # mccabe (complexity)
    "E",   # pycodestyle (error)
    "F",   # pyflakes (syntax)
    "I",   # isort (imports)
    "N",   # pep8-naming
    "W",   # pycodestyle (warning)
    # Not in product:
    "A",      # flake8-builtins
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "RUF1",   # RUF100-RUF102 ("noqa" checks)
    "RUF200", # Checks if pyproject is valid
]
ignore = [
    "E501",    # LineTooLong (mainly for docstrings)
    "B905",    # Zip without explicit strict
    "PLR2004", # Magic values
    "S101",    # No assert
    "PGH003",  # Use specific rule codes when ignoring type issues
    "PLC0415", # Imports not at top of file
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S603", "D", "E", "W", "PLR0913", "N803", "N806"]
"*.ipynb" = ["ALL"]
"**/__init__.py" = [
    "F401", # Unused imports (imports in __init__.py are often for re-exporting)
    "F403", # Wildcard imports `from module import *` (common in __init__.py)
    "F405", # Name may be undefined from star imports
    "E402", # Module level import not at top of file (sometimes needed for circular import fixes)
    "D104", # Missing docstring in public package (if using pydocstyle rules)
]
"preprocessing/*" = ["ALL"] # TODO: add preprocessing

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"